--- a/app/src/main/res/layout/item_artist.xml
+++ b/app/src/main/res/layout/item_artist.xml
@@ -67,7 +67,7 @@
                     android:layout_height="0dp"
 
                     android:adjustViewBounds="true"
-                    android:scaleType="fitXY"
+                    android:scaleType="centerCrop"
                     android:src="@drawable/ic_pattern_background"
 
                     app:layout_constraintBottom_toBottomOf="parent"
