--- a/app/src/main/res/layout/item_song.xml
+++ b/app/src/main/res/layout/item_song.xml
@@ -27,7 +27,7 @@
             android:background="@color/cardBackground">
 
             <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/circleImageView"
+                android:id="@+id/profilePicture"
                 android:layout_width="84dp"
                 android:layout_height="0dp"
 
@@ -48,9 +48,10 @@
                 app:backgroundTint="@color/colorPrimary"
                 app:elevation="6dp"
                 app:fabSize="mini"
+                android:layout_margin="8dp"
 
-                app:layout_constraintBottom_toBottomOf="@+id/circleImageView"
-                app:layout_constraintEnd_toEndOf="@+id/circleImageView" />
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/verticalGuideline0" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="0dp"
