--- a/app/src/main/res/drawable/round_border_dark.xml
+++ b/app/src/main/res/drawable/round_border_dark.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape android:shape="rectangle"
-    android:tint="@color/colorBackground"
+    android:tint="@color/cardBackground"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <stroke
-        android:color="@color/colorBackground"
+        android:color="@color/cardBackground"
         android:width="1dp" />
-    <corners android:radius="40dp" />
+    <corners android:radius="4dp" />
 </shape>
