--- a/app/src/main/res/layout/item_song.xml
+++ b/app/src/main/res/layout/item_song.xml
@@ -29,9 +29,8 @@
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/profilePicture"
                 android:layout_width="84dp"
-                android:layout_height="0dp"
+                android:layout_height="84dp"
 
-                android:layout_margin="12dp"
                 android:src="@drawable/doggi_target"
 
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -93,16 +92,21 @@
                         android:orientation="vertical"
 
                         app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toStartOf="@+id/verticalGuideline2"
+                        app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent">
 
                         <TextView
                             android:id="@+id/songTitle"
-                            android:layout_width="match_parent"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
 
+                            android:layout_marginBottom="4dp"
                             android:fontFamily="@font/roboto_medium"
+                            android:background="@drawable/round_border_dark"
+                            android:paddingHorizontal="6dp"
+
+                            android:paddingVertical="2dp"
                             android:text="Untitled"
                             android:textColor="@color/whitesmoke"
                             android:textSize="20dp"
@@ -111,20 +115,29 @@
 
                         <TextView
                             android:id="@+id/artists"
-                            android:layout_width="match_parent"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
 
+                            android:layout_marginBottom="4dp"
+                            android:background="@drawable/round_border_dark"
                             android:fontFamily="@font/roboto_regular"
+                            android:paddingHorizontal="6dp"
+
+                            android:paddingVertical="2dp"
                             android:text="Artist Name &amp; Artist Name"
                             android:textColor="@color/whitesmoke"
                             android:textSize="16dp" />
 
                         <TextView
                             android:id="@+id/songProgress"
-                            android:layout_width="match_parent"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
 
+                            android:background="@drawable/round_border_dark"
                             android:fontFamily="@font/roboto_light"
+                            android:paddingHorizontal="6dp"
+
+                            android:paddingVertical="2dp"
                             android:text="Producing..."
                             android:textColor="@color/whitesmoke"
                             android:textSize="16dp" />
@@ -136,10 +149,12 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
 
-                        android:layout_margin="12dp"
+                        android:layout_margin="6dp"
                         android:minWidth="24dp"
                         android:minHeight="24dp"
                         android:src="@drawable/ic_star_border"
+                        android:background="@drawable/round_border_dark"
+                        android:padding="4dp"
 
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -148,11 +163,14 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
 
-                        android:layout_margin="12dp"
+                        android:layout_marginEnd="8dp"
+                        android:layout_marginBottom="8dp"
                         android:drawableEnd="@drawable/ic_navigate_next"
                         android:fontFamily="@font/roboto_italic"
-                        android:minWidth="24dp"
-                        android:minHeight="24dp"
+
+                        android:background="@drawable/round_border_dark"
+                        android:paddingHorizontal="6dp"
+                        android:paddingVertical="2dp"
 
                         android:src="@drawable/ic_navigate_next"
                         android:text="Yesterday"
