--- a/app/src/main/res/layout/item_song.xml
+++ b/app/src/main/res/layout/item_song.xml
@@ -87,7 +87,8 @@
                     <LinearLayout
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_margin="16dp"
+                        android:layout_marginVertical="16dp"
+                        android:layout_marginHorizontal="8dp"
 
                         android:orientation="vertical"
 
@@ -163,8 +164,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
 
-                        android:layout_marginEnd="8dp"
-                        android:layout_marginBottom="8dp"
+                        android:layout_marginEnd="6dp"
+                        android:layout_marginBottom="6dp"
                         android:drawableEnd="@drawable/ic_navigate_next"
                         android:fontFamily="@font/roboto_italic"
 
