--- a/app/src/main/res/drawable/ic_navigate_next_dark.xml
+++ b/app/src/main/res/drawable/ic_navigate_next_dark.xml
@@ -4,6 +4,6 @@
     android:width="24dp"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <path
-        android:fillColor="@color/whitesmoke"
+        android:fillColor="@color/colorBackground"
         android:pathData="M10,6L8.59,7.41 13.17,12l-4.58,4.59L10,18l6,-6z" />
 </vector>
