--- a/app/src/main/res/layout/item_artist.xml
+++ b/app/src/main/res/layout/item_artist.xml
@@ -42,7 +42,7 @@
                 <com.mikhaellopez.circularimageview.CircularImageView
                     android:id="@+id/profilePicture"
                     android:layout_width="68dp"
-                    android:layout_height="0dp"
+                    android:layout_height="wrap_content"
 
                     android:src="@drawable/doggi_target"
 
@@ -135,9 +135,9 @@
                                 android:layout_height="wrap_content"
 
                                 android:fontFamily="@font/roboto_light"
-                                android:text="username"
+                                android:text="michaeljordan"
                                 android:textColor="@color/whitesmoke"
-                                android:maxWidth="80dp"
+                                android:maxWidth="980dp"
                                 android:textSize="16dp" />
 
                             <TextView
