--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -23,18 +23,19 @@
     <!--  GUIDELINES + PROGRESS BAR  -->
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/editCells"
+        android:id="@+id/editLayers"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
 
-        android:orientation="horizontal"
+        android:orientation="vertical"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintEnd_toEndOf="parent"
 
-        app:layout_constraintHorizontal_bias="0.0"
+        tools:listitem="@layout/item_layer"
+        tools:itemCount="3"
+
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@id/verticalGuideline0"
-        app:layout_constraintTop_toBottomOf="@id/timeline"
-        tools:listitem="@layout/item_cell" />
+        app:layout_constraintTop_toBottomOf="@id/timeline" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/verticalGuideline0"
