--- a/app/src/main/res/layout/table_view_cell_layout.xml
+++ b/app/src/main/res/layout/table_view_cell_layout.xml
@@ -2,8 +2,8 @@
 <LinearLayout android:id="@+id/cell_container"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="@dimen/cell_height"
+    android:layout_width="80dp"
+    android:layout_height="80dp"
     android:background="@color/cell_background_color"
     android:gravity="center"
     android:orientation="vertical">
