--- a/app/src/main/res/layout/table_view_row_header_layout.xml
+++ b/app/src/main/res/layout/table_view_row_header_layout.xml
@@ -3,8 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/cell_background_color"
-    android:layout_width="@dimen/default_row_header_width"
-    android:layout_height="@dimen/cell_height">
+    android:layout_width="80dp"
+    android:layout_height="80dp">
 
     <LinearLayout
         android:id="@+id/row_header_container"
