--- a/app/src/main/res/layout/table_view_corner_layout.xml
+++ b/app/src/main/res/layout/table_view_corner_layout.xml
@@ -2,26 +2,29 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="80dp"
     android:layout_height="32dp"
-    android:background="@android:color/white">
+    >
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
+        android:layout_width="80dp"
+        android:layout_height="32dp"
+
         android:text="Corner"
-        android:textColor="@color/table_view_default_text_color"
+        android:textColor="@color/colorPrimary"
         android:textSize="@dimen/text_size"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+
+        android:background="@color/cardBackground" />
 
     <View
         android:layout_width="2dp"
         android:layout_height="match_parent"
         android:layout_alignParentEnd="true"
-        android:background="@color/header_line_color" />
+        android:background="@color/colorPrimary" />
 
     <View
         android:layout_width="match_parent"
         android:layout_height="2dp"
         android:layout_alignParentBottom="true"
-        android:background="@color/header_line_color" />
+        android:background="@color/colorPrimary" />
+
 </RelativeLayout>
