--- a/app/src/main/res/layout/table_view_row_header_layout.xml
+++ b/app/src/main/res/layout/table_view_row_header_layout.xml
@@ -2,7 +2,6 @@
 <RelativeLayout android:id="@+id/row_root"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/cell_background_color"
     android:layout_width="80dp"
     android:layout_height="80dp">
 
@@ -11,7 +10,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center_vertical"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="@color/cardBackground">
 
         <TextView
             android:id="@+id/row_header_textView"
