--- a/app/src/main/res/layout/table_view_corner_layout.xml
+++ b/app/src/main/res/layout/table_view_corner_layout.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="80dp"
-    android:layout_height="32dp"
-    >
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
         android:layout_width="80dp"
@@ -13,18 +13,11 @@
         android:textSize="@dimen/text_size"
         android:textStyle="bold"
 
-        android:background="@color/cardBackground" />
+        android:background="@color/cardBackground"
 
-    <View
-        android:layout_width="2dp"
-        android:layout_height="match_parent"
-        android:layout_alignParentEnd="true"
-        android:background="@color/colorPrimary" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:layout_alignParentBottom="true"
-        android:background="@color/colorPrimary" />
-
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
