--- a/app/src/main/res/layout/table_view_column_header_layout.xml
+++ b/app/src/main/res/layout/table_view_column_header_layout.xml
@@ -1,49 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout android:id="@+id/column_header_container"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/column_header_container"
     android:layout_width="wrap_content"
-    android:layout_height="32dp"
-    android:orientation="vertical"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="wrap_content">
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal"
-        android:background="@color/cardBackground">
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_timeline"
+        android:tint="@color/colorPrimary"
+        android:background="@color/cardBackground"
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:orientation="horizontal">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent">
+    <TextView
+        android:id="@+id/column_header_barNumber"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
 
-                <TextView
-                    android:id="@+id/column_header_barNumber"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+        android:layout_marginStart="6dp"
+        android:text="1"
+        android:textColor="@color/colorPrimary"
+        android:textSize="12dp"
 
-                    android:text="1"
-                    android:textColor="@color/colorPrimary"
-                    android:layout_marginStart="6dp"
-                    android:textSize="12dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintStart_toStartOf="parent" />
-
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/ic_timeline"
-                    android:tint="@color/colorPrimary" />
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-        </LinearLayout>
-
-    </FrameLayout>
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
