--- a/app/src/main/res/layout/table_view_column_header_layout.xml
+++ b/app/src/main/res/layout/table_view_column_header_layout.xml
@@ -6,8 +6,9 @@
     android:layout_height="wrap_content">
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/row_header_width"
+        android:layout_height="@dimen/column_header_height"
+
         android:src="@drawable/ic_timeline"
         android:tint="@color/colorPrimary"
         android:background="@color/cardBackground"
