--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,8 +1,7 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
 
-    <dimen name="cell_height">40dp</dimen>
-    <dimen name="text_size">12sp</dimen>
-    <dimen name="default_row_header_width">55dp</dimen>
-    <dimen name="default_column_header_height">40dp</dimen>
+    <dimen name="column_header_height">32dp</dimen>
+    <dimen name="row_header_width">80dp</dimen>
+    <dimen name="cell_length">80dp</dimen>
 </resources>
