--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
 
     <color name="whitesmoke">#f5f5f5</color>
     <color name="cardBackground">#2C2C2C</color>
+    <color name="instrumentBackground">#3C3C3C</color>
 
     <color name="cell_background_color">#ffffff</color>
     <color name="header_line_color">#0a0a0a</color>
