--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,5 @@
     <dimen name="column_header_height">32dp</dimen>
     <dimen name="row_header_width">80dp</dimen>
     <dimen name="cell_length">80dp</dimen>
+    <dimen name="record_button_radius">28dp</dimen>
 </resources>
